# python-tox-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: byte_order_marks.yml  coverage.yml  dependabot_automerge.yml  dev_environment.yml  formatting.yml  linting.yml  packaging.yml  publishing.yml  unittests.yml
src/: _package_version.py
src/package/: module.py  py.typed
unittests/: test_module.py
