[project]
name = "python-tox-template"
description = "python tox template"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "OLILHR" }]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
dynamic = ["readme", "version"]

[project.optional-dependencies]
coverage = [
    "coverage==7.7.1"
]
dev = [
    "pip-tools"
]
linting = [
    "pylint==3.3.2"
]
formatting = [
    "black==24.10.0",
    "isort==5.13.2"
]
packaging = [
    "build==1.2.2.post1",
    "twine==6.1.0"
]
spellchecking = [
    "codespell==2.3.0"
]
testing = [
    "pytest==8.3.4"
]
typechecking = [
    "mypy==1.13.0"
]

[project.urls]
Changelog = "https://github.com/OLILHR/python-tox-template/releases"
Homepage = "https://github.com/OLILHR/python-tox-template"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_package_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]